--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,18 @@
     background-clip: text;
     color: transparent;
 }
+
+@keyframes marquee {
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+.animate-marquee {
+    display: inline-block;
+    animation: marquee 15s linear infinite;
+}
